# comrade

./: .gitignore  Cargo.toml  LICENSE  test.txt
src/: args.rs  crate_errors.rs  example.rs  geo_3d.rs  io.rs  layout.rs  lib.rs  main.rs  matching.rs  mesh.rs  sim.rs
src/args/: proc_errors.rs
src/geo_3d/: plane.rs  point.rs  surface.rs  vector.rs
src/io/: stl.rs
src/layout/: cfg.rs  geo_3d.rs  methods.rs  proc_errors.rs  stl.rs  styles.rs
src/layout/methods/: adam_circles.rs  alternating_circles.rs  alternating_symmetric.rs  gradient_circles.rs  helper.rs  iterative_circle.rs  iterative_circles.rs  k_means_isometric.rs  manual_circles.rs  manual_circles_OLD.rs  manual_symmetric.rs  single_circle.rs
src/layout/styles/: iterative_circle.rs
src/matching/: proc_errors.rs
src/mesh/: cfg.rs  methods.rs  proc_errors.rs
src/mesh/methods/: gmsh.rs  stl_polygons.rs  stl_slot.rs
src/sim/: cfg.rs  methods.rs  proc_errors.rs
src/sim/methods/: load_marie_output.rs
tests/: cli_tests.rs  large_tests.rs
tests/cfg/: it_circ_0.yaml  layout_0.yaml  mesh_0.yaml  single_circ_0.yaml  step_test_layout.yaml  step_test_mesh.yaml  step_test_single_sphere.yaml  stl_poly_0.yaml
tests/cfg/basic_curve/: layout.args  layout.yaml  mesh.args  mesh.yaml  stl_poly.cfg  stl_poly.yaml
tests/cfg/basic_step/: layout.args  layout.yaml  mesh.args  mesh.yaml  stl_poly.cfg
tests/cfg/multi_step/: layout.args  layout.yaml  manual_circles.cfg  (+5 more)
tests/data/: 10mm_step.stl  3DBenchy.stl  big_plane.stl  tiny_cap.stl  tiny_cap_ascii.stl  tiny_cap_remesh.stl  tiny_cap_remesh_ascii.stl
