[package]
name = "comrade"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.13"
clap = { version = "4.4.16", features = ["derive"] }
enum_dispatch = "0.3.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
stl_io = "0.7.0"
strum = { version = "0.25.0", features = ["derive"] }
